--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,13 +16,16 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      - name: Run tests (logged-in search)
-        run: npm run test2:search-loggedin
+      - name: Run Playwright logged-in search test
+        run: npx playwright test tests/search-loggedin.spec.js
 
       - name: Upload Allure Results
         if: ${{ always() }}
