--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,22 +28,22 @@ jobs:
         run: npx playwright test tests/search-loggedin.spec.js
 
       - name: Upload Allure Results
-        if: ${{ always() }}
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-results
-          path: allure-results
+          path: ./allure-results
           retention-days: 10
 
       - name: Generate Allure Report
         run: |
-          npm install -g allure-commandline --unsafe-perm=true
-          allure generate allure-results --clean -o allure-report
+          npm install -g allure-commandline --save-dev
+          allure generate ./allure-results --clean -o ./allure-report
 
       - name: Upload Allure Report as artifact
         if: ${{ always() }}
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
-          path: allure-report
+          path: ./allure-report
           retention-days: 30
