--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,7 +25,7 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run Playwright logged-in search test
-        run: npx playwright test tests/search-loggedin.spec.js
+        run:  npx playwright test tests/search-loggedin.spec.js --reporter=line,allure-playwright
 
       - name: Upload Allure Results
         if: always()
