--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,8 +24,15 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
+      # ⚠️ здесь уже НЕ указываем репортеры в CLI,
+      # они заданы в playwright.config.ts/js (list + allure-playwright)
       - name: Run Playwright logged-in search test
-        run:  npx playwright test tests/search-loggedin.spec.js --reporter=line,allure-playwright
+        run: npx playwright test tests/search-loggedin.spec.js
+
+      # посмотреть, что allure-results реально создался (можно потом убрать)
+      - name: List Allure results
+        if: always()
+        run: ls -R ./allure-results || echo "no allure-results folder"
 
       - name: Upload Allure Results
         if: always()
@@ -36,12 +43,14 @@ jobs:
           retention-days: 10
 
       - name: Generate Allure Report
+        if: always()
         run: |
-          npm install -g allure-commandline --save-dev
-          allure generate ./allure-results --clean -o ./allure-report
+          # allure-commandline уже стоит как devDependency,
+          # поэтому достаточно npx
+          npx allure generate ./allure-results --clean -o ./allure-report
 
       - name: Upload Allure Report as artifact
-        if: ${{ always() }}
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
