--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches: [ main, master ]
 
+permissions:
+  pages: write
+  id-token: write
+  contents: read
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -24,35 +29,45 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      # ⚠️ здесь уже НЕ указываем репортеры в CLI,
-      # они заданы в playwright.config.ts/js (list + allure-playwright)
+      # 🔥 ТВОЯ КОМАНДА ТЕСТОВ
+      # Репортеры НЕ указываем здесь, они должны быть в playwright.config.js
       - name: Run Playwright logged-in search test
         run: npx playwright test tests/search-loggedin.spec.js
 
-      # посмотреть, что allure-results реально создался (можно потом убрать)
+      # (Опционально) посмотреть, что результаты Allure действительно есть
       - name: List Allure results
         if: always()
-        run: ls -R ./allure-results || echo "no allure-results folder"
-
-      - name: Upload Allure Results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-results
-          path: ./allure-results
-          retention-days: 10
+        run: ls -R ./allure-results || echo "⚠️ No allure-results found"
 
       - name: Generate Allure Report
         if: always()
-        run: |
-          # allure-commandline уже стоит как devDependency,
-          # поэтому достаточно npx
-          npx allure generate ./allure-results --clean -o ./allure-report
+        run: npx allure generate ./allure-results --clean -o ./allure-report
 
-      - name: Upload Allure Report as artifact
+      - name: Upload Allure Report as Artifact
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
           path: ./allure-report
-          retention-days: 30
+
+      # ⭐ Публикация в GitHub Pages ⭐
+      - name: Upload report for GitHub Pages
+        if: always()
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: ./allure-report
+
+  deploy:
+    needs: test
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2
