--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,7 +12,6 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
 
     steps:
       - name: Checkout repository
@@ -21,7 +20,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 18
 
       - name: Install dependencies
         run: npm install
@@ -29,40 +28,37 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
-      # ТВОЯ команда тестов
-      - name: Run Playwright logged-in search test
+      - name: Run Playwright test
         run: npx playwright test tests/search-loggedin.spec.js
 
       - name: Generate Allure Report
         if: always()
-        run: npx allure generate ./allure-results --clean -o ./allure-report
+        run: npx allure generate allure-results --clean -o allure-report
 
-      # ⭐ Новый upload-artifact — v4
-      - name: Upload Allure Report as Artifact
-        if: always()
+      # Optional artifact download
+      - name: Upload Allure Report artifact
         uses: actions/upload-artifact@v4
         with:
           name: allure-report
-          path: ./allure-report
+          path: allure-report
 
-      # ⭐ Для GitHub Pages используется upload-pages-artifact (он актуальный)
+      # ⭐ GitHub Pages artifact (ONLY THIS ONE gets deployed)
       - name: Upload report for GitHub Pages
-        if: always()
-        uses: actions/upload-pages-artifact@v4
+        uses: actions/upload-pages-artifact@v2
         with:
-          path: ./allure-report
+          path: allure-report
 
   deploy:
     needs: test
-    permissions:
-      pages: write
-      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    permissions:
+      pages: write
+      id-token: write
 
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4
+        uses: actions/deploy-pages@v2
